# TRANSMUTE-SWARM

./: .gitignore  CLAUDE.md  README.md  agent.py  architecture.md  architecture_current_state.md  coordinator_script.py  decomposition.yaml  evaluate.py  evaluate_composite.py  model_config.yaml  probe_models.py  program_filter.md  program_search.md  program_sort.md  pyproject.toml  requirements.txt  run_experiment.sh  swarm
.github/workflows/: coordinator.yml  swarm.yml
DOCS/: SWARM_DESIGN.md  SWARM_DESIGN_V3.md  architecture.md  improvements_discussion.md  subagent_improvements.md
DOCS/reports/: run_analysis_test1_test2.md
agents/: agent.py  calcinator.py  cog_manager.py  coordinator_script.py  transmuter.py
cli/: __init__.py  __main__.py  console.py
cli/commands/: __init__.py  clean.py  cogs.py  run.py  status.py
cogs/finance/: program.md
cogs/search/: program.md
config/: model_config.yaml  requirements.txt  task_registry.yaml  transmutation_keys.md
config/templates/finance_strategy/: program.md.tmpl  scaffold.py.tmpl
data/: nifty50_3mo.csv
discoveries/: filter.md  search.md  shared_context.md  sort.md
oracles/: evaluate.py  evaluate_composite.py  evaluate_finance.py
prompts/: decomposition.yaml  dharma.md
prompts/programs/: program_filter.md  program_search.md  program_sort.md
reports/: autoresearch_comparison_2026-03-17.md  finance_run_2026-03-17.md  run_analysis_poc5.md
results/: token_usage.tsv
scripts/: append_tsv.py  fetch_nifty50.py  probe_models.py  task_config.py
solutions/: filter.py  finance_ma.py  search.py  sort.py
(+2 files in other folders)
