[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transmute-swarm"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
swarm = "cli.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
